modify: 쿠키 유틸 클래스 테스트코드가 배포 빌드에서만 문제가 있어 수정